objects/Offer5__c.object
<CustomObject>
    <fields>
        <fullName>Offer5FLS__c</fullName>
        <label>Offer5FLS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>offer5text__c</fullName>
        <label>offer5text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>offer5update__c</fullName>
        <label>offer5update</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Mango</fullName>
                </value>
                <value>
                    <fullName>Pineapple</fullName>
                </value>
                <value>
                    <fullName>Strawberry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Offer5</label>
    <nameField>
        <label>Offer1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>offers5</pluralLabel>
    <recordTypes>
        <fullName>offer_name</fullName>
        <active>true</active>
        <description>new salespitch</description>
        <label>offer name</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>